chore: grammar check

--- a/src/docs/5.37.x/headless-cms/extending/customize-entry-editor-actions.mdx
+++ b/src/docs/5.37.x/headless-cms/extending/customize-entry-editor-actions.mdx
@@ -29,14 +29,14 @@ This feature is available since Webiny **v5.37.0**.
 
 ## Overview
 
-By default, Headless CMS offers some built-in actions, that handle entry saving, publishing and deletion: these are located at the top of the content entry form.
+By default, Headless CMS offers built-in actions that handle entry saving, publishing and deletion: these are located at the top of the content entry form.
 
-To customize actions, you need to use the `ContentEntryEditorConfig` component. For this article, we will use `ButtonAction` and `MenuItemAction` components, located in the `Actions` namespace.
+To customize actions, you need to use the `ContentEntryEditorConfig` component. For this article, we will use `ButtonAction` and `MenuItemAction` components in the `Actions` namespace.
 
-As you can see, there are two types of actions: 
+As you can see, there are two types of actions:
 
 1. `ButtonAction` listed as a button;
-2. `MenuItemAction` listed inside the menu located in the top right corner.
+2. `MenuItemAction` listed in the top right corner menu.
 
 <Image src={hcmsActions} title="Overview built-in actions" />
 
@@ -44,16 +44,16 @@ As you can see, there are two types of actions:
 
 ### Add a Button
 
-To add a new button, you need to use the `ContentEntryEditorConfig` component and mount it within your `Admin` app. Your button is just a regular React element, so it can render anything you want.
+To add a new button, use the `ContentEntryEditorConfig` component and mount it within your `Admin` app. Your button is just a regular React element, so it can render anything you want.
 
-To help developers keep the UI consistent, you'll find a handy `useButtons` hook that exposes 4 button components:
+To help developers keep the UI consistent, you'll find a handy `useButtons` hook that exposes four button components:
 
 - `ButtonDefault`
 - `ButtonPrimary`
 - `ButtonSecondary`
 - `IconButton`
 
-Use one of these components if you want to render a button that inherits UI rules and guidelines from the Webiny core package.
+Use one of these components to render a button that inherits UI rules and guidelines from the Webiny core package.
 
 ```diff-tsx apps/admin/src/App.tsx
 import React from "react";
@@ -89,9 +89,9 @@ export const App: React.FC = () => {
 };
 ```
 
-By declaring the `modelIds` prop, you can define in which content model entry editor you want to show your custom button. If you exclude this prop, the button will be registered for all models in the system.
+By declaring the `modelIds` prop, you can define in which Content Model Entry Editor you want to show your custom button. If you exclude this prop, the button will be registered for all models in the system.
 
-In the example above, you'll see your new element the next time you open a `car` content entry editor. This is the whole process of registering a new button element.
+In the example above, you'll see your new element the next time you open a `car` Content Model Entry Editor. This is the whole process of registering a new button element.
 
 <Image src={hcmsActionsButton} title="Custom Button in Action" />
 
@@ -184,9 +184,9 @@ export const App: React.FC = () => {
 };
 ```
 
-By declaring the `modelIds` prop, you can define in which content model entry editor you want to show your custom menu item. If you exclude this prop, the menu item will be registered for all models in the system.
+By declaring the `modelIds` prop, you can define in which Content Model Entry Editor you want to show your custom menu item. If you exclude this prop, the menu item will be registered for all models in the system.
 
-In the example above, you'll see your new element the next time you open a `car` content entry editor. This is the whole process of registering a new item element.
+In the example above, you'll see your new element the next time you open a `car` Content Model Entry Editor. This is the whole process of registering a new menu item element.
 
 <Image src={hcmsActionsMenuItem} title="Custom Menu Item in Action" />
 
