wip: change titles of the toolbar configurations

--- a/src/docs/5.37.x/page-builder/extending/lexical-editor-configuration-api.mdx
+++ b/src/docs/5.37.x/page-builder/extending/lexical-editor-configuration-api.mdx
@@ -103,7 +103,7 @@ All of this configuration options have the same role. They override, remove or a
 
 In this section, we will cover configuration step by step and use the Header and Paragraph configuration API to customize the look and functionality of the Heading component.
 
-## Add action
+## Add an action
 
 To add a new custom toolbar action component register your component with a unique `name` and provide your custom action component in the `element` prop.
 
@@ -114,7 +114,7 @@ To add a new custom toolbar action component register your component with a uniq
 </LexicalEditorConfig>
 ```
 
-## Override existing action
+## Replacing an action
 
 To override the existing action component specify the action `name` of the existing Webiny toolbar action and provide your toolbar action component in the element prop.
 
@@ -124,7 +124,7 @@ To override the existing action component specify the action `name` of the exist
 </LexicalEditorConfig>
 ```
 
-## Remove action
+## Remove an action
 
 To remove the toolbar action specify the Webiny toolbar action name, add the `remove` prop and the action will be removed.
 
@@ -138,7 +138,7 @@ To remove the toolbar action specify the Webiny toolbar action name, add the `re
   Be aware that plugins and nodes related to this particular action are still mounted.
 </Alert>
 
-## Change the order of the actions
+## Positioning an action
 
 To change the order of the toolbar actions, first, you need to provide the `name` of the action you want to move. Next, add the `before` or `after` prop with the name of the component that is used as a reference to the preferred spot.
 
