--- a/src/docs/shared/release-notes/5.37.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.0/changelog.mdx
@@ -277,6 +277,8 @@ Finally, for the most advanced use cases, users can upgrade to the **Enterprise*
 
 This feature is especially useful for larger organizations, where it's common to have multiple teams working on different projects. Also, it's a great way to simplify the process of managing permissions for multiple users, as you can simply assign a role to a team, instead of assigning it to each individual user.
 
+For more information on the Teams, please refer to the newly added [Teams](/docs/enterprise/teams) section of the Webiny Enterprise documentation.
+
 #### A Note On Backwards Compatibility
 
 The Advanced Access Control Layer (AACL) and the three tiers outlined above are a new concept introduced with this release. As such, it's important to note existing projects will not be affected by this change in any way.
