chore: add full-stop

--- a/src/docs/5.37.x/headless-cms/extending/customize-entry-editor-actions.mdx
+++ b/src/docs/5.37.x/headless-cms/extending/customize-entry-editor-actions.mdx
@@ -29,7 +29,7 @@ This feature is available since Webiny **v5.37.0**.
 
 ## Overview
 
-By default, Headless CMS offers built-in actions that handle entry saving, publishing and deletion: these are located at the top of the content entry form.
+By default, Headless CMS offers built-in actions that handle entry saving, publishing and deletion. These are located at the top of the content entry form.
 
 To customize actions, you need to use the `ContentEntryEditorConfig` component. For this article, we will use `ButtonAction` and `MenuItemAction` components in the `Actions` namespace.
 
