chore: add admin app path to code examples

--- a/src/docs/5.37.x/headless-cms/extending/customize-entry-list-filters.mdx
+++ b/src/docs/5.37.x/headless-cms/extending/customize-entry-list-filters.mdx
@@ -69,7 +69,7 @@ The code examples below are based on a content model called `Property` with the 
 
 To add a new filter, you need a regular React element to pass to the `Browser.Filter` component through the `element` prop. You must also include the `name` prop, which serves as a unique identifier, enabling further interactions, such as positioning, removing, and replacing.
 
-```tsx
+```tsx apps/admin/src/App.tsx
 import { ContentEntryListConfig } from "@webiny/app-headless-cms";
 
 const { Browser } = ContentEntryListConfig;
@@ -97,7 +97,7 @@ In the example above, the next time you open your `property` content model brows
 
 Here's an example of how to create a filter that displays only "Deluxe" properties. We consider a property to be "Deluxe" if its price is over 1 million.
 
-```tsx
+```tsx apps/admin/src/App.tsx
 import { ContentEntryListConfig } from "@webiny/app-headless-cms";
 import { useBind } from "@webiny/form";
 import { Switch } from "@webiny/ui/Switch";
@@ -138,7 +138,7 @@ Sometimes, you need to implement filtering logic that is more complex than just 
 
 To correctly format our filters, we'll use the `Browser.FiltersToWhere` component to register our custom converter, allowing you to convert form data to a valid GraphQL query input. With this approach, you have full control over values that will be passed to the API when the user interacts with the filters UI.
 
-```tsx
+```tsx apps/admin/src/App.tsx
 import { ContentEntryListConfig } from "@webiny/app-headless-cms";
 import { useBind } from "@webiny/form";
 import { Select } from "@webiny/ui/Select";
