wip: remove alert for the lexical editor docs link

--- a/src/docs/5.37.x/headless-cms/integrations/render-lexical-rich-text-content.mdx
+++ b/src/docs/5.37.x/headless-cms/integrations/render-lexical-rich-text-content.mdx
@@ -89,10 +89,6 @@ export const HomePage = () => {
 
 Sometimes you need a custom content modifications, Webiny allow you to add custom features and modify the existing one.
 
-<Alert title="LEXICAL CMS CONFIGURATION API" type={"info"}>
- Webiny leverages on the Lexical editor for content creation, please check the Lexical editor page to [learn more](https://lexical.dev/).
-</Alert>
-
 <Image src={configureLexicalRenderer} title="Advanced Configuration" />
 
 To add custom features, you need to start in the following order.
@@ -113,7 +109,7 @@ to your custom React project <diagram-letter>B</diagram-letter>.
 ### Add node
 
 If you already have added the custom features in the Lexical Editor in the Headless CMS, all you need to do now, 
-is copy your custom Lexical node from the webiny project, add to your custom project, and provide the Lexical node in array 
+is to  your custom Lexical nodes from the webiny project, add to your custom project, and provide the Lexical nodes in array 
 as is presented in the code below:
 
 ```tsx HomePage.tsx
