wip: correction in the legacy rte article

--- a/src/docs/5.37.x/headless-cms/integrations/legacy-render-rich-text-content.mdx
+++ b/src/docs/5.37.x/headless-cms/integrations/legacy-render-rich-text-content.mdx
@@ -7,7 +7,7 @@ import Link from "next/link";
 import { Alert } from "@/components/Alert";
 
 <Alert type="warning">
-  This article is moved from version 5.37.0 to new page. Clink on this <Link href={"https://www.webiny.com/docs/headless-cms/integrations/render-lexical-rich-text-content"}>link</Link> to learn more.
+  This article is moved from version 5.37.0 to a new page. Clink on this <Link href={"https://www.webiny.com/docs/headless-cms/integrations/render-lexical-rich-text-content"}>link</Link> to learn more.
 </Alert>
 
 <Alert type="success" title="What you'll learn">
