wip: review update 1

--- a/src/docs/5.37.x/headless-cms/integrations/render-lexical-rich-text-content.mdx
+++ b/src/docs/5.37.x/headless-cms/integrations/render-lexical-rich-text-content.mdx
@@ -34,7 +34,7 @@ Request the data from the GraphQl API and render the content by use of our prede
 # Usage
 To render CMS content we need to go through 3 steps:
 1. Installation of the `@webiny/react-rich-text-lexical-renderer` package.
-2. Add Webiny Theme Styles To Your Project.
+2. Add Webiny theme styles to your project.
 3. Mount the component and render the CMS content.
 
 ### 1. Installation
@@ -109,7 +109,7 @@ to your custom React project <diagram-letter>B</diagram-letter>.
 ### Add node
 
 If you already have added the custom features in the Lexical Editor in the Headless CMS, all you need to do now, 
-is to  your custom Lexical nodes from the webiny project, add to your custom project, and provide the Lexical nodes in array 
+is to  your custom Lexical nodes from the Webiny project, add to your custom project, and provide the Lexical nodes in array 
 as is presented in the code below:
 
 ```tsx HomePage.tsx
